# Agentic-AI-framework

./: .env.example  .gitignore  CLAUDE.md  Full User Manual - Genesis.html  MODULE_INDEX.md  MODULE_MAP.md  Nocode2Procode-Genesis-Experience.html  Nocode2Procode-Genesis-Pro.html  Nocode2Procode-Genesis.html  PREREQUISITES.md  README.md  USER_MANUAL.md  component_pattern_selection.json  design_decision_report.json  design_quality_score.json  domain_style_pack.json  install-genesis.ps1  install.ps1  install.sh  magic_selection.json  motion_plan.json  motion_purpose_contract.json  pyproject.toml  stack_decision_report.json  tool_selection_explanation.md  ui_ux_pro_max_brief.md
.claude/: settings.local.json
.claude/commands/: genesis-estimate.md  genesis-migrate.md  genesis-qa.md  install-genesis-e2e.md  nocode2procode-deploy.md  nocode2procode-discover.md  nocode2procode-estimate.md  nocode2procode-figma.md  nocode2procode-generate.md  nocode2procode-image.md  nocode2procode-install.md  nocode2procode-migrate.md  nocode2procode-qa.md  nocode2procode-replay.md  nocode2procode-report.md
.genesis/: genesis.agents.yaml  genesis.capabilities.yaml  genesis.deploy.yaml  genesis.design.yaml  genesis.design_quality.yaml  genesis.flow.yaml  genesis.install.yaml  genesis.memory.yaml  genesis.outputs.yaml  genesis.policy.yaml  genesis.prompting.yaml  genesis.routing.yaml
.github/workflows/: publish.yml
adapters/: module.yaml
agents/: module.yaml
apps/: module.yaml
benchmarks/: benchmark_manifest.yaml  module.yaml
compliance/: module.yaml
docs/: ARCHITECTURE.md
docs/playbooks/: build-order.md  model-strategy.md  prompt-engineering.md  tool-routing.md  visual-fidelity.md
evals/: eval_plan.yaml
evidence/: module.yaml
generators/: module.yaml
genesis_apps/Hospital_Online_Consultation_Portal/: before_after_improvement_report.md  final_report.md  run_app.ps1
genesis_apps/customer_portal_migrated/: component_pattern_selection.json  design_decision_report.json  domain_style_pack.json  magic_selection.json  migration_manifest.json  mobile_design_decision_report.json  motion_plan.json  motion_purpose_contract.json  tool_selection_explanation.md  ui_ux_pro_max_brief.md  visual_lock_spec.json
genesis_apps/hospital_consultation_portal/: DESIGN.md  approval.json  approved_canonical_app_spec.json  approved_source_truth_report.json  asset_inventory.json  before_after_improvement_report.md  brd_design_intent.json  brd_mockup_inventory.json  brd_understanding_gate.json  brd_understanding_report.json  brd_understanding_summary.md  canonical_app_spec.json  canonical_spec_approval_gate.json  component_pattern_selection.json  component_registry.json  confidence_scores.json  conflict_resolution_report.json  delivery_mode_decision.json  demo_credentials.json  design_decision_report.json  design_quality_score.json  design_system_approval_gate.json  design_tokens.json  domain_style_pack.json  dry_run_confidence_scores.json  effort_matrix.json  estimation_report.md  final_migration_confidence_report.md  generated_app_approval_gate.json  generated_file_manifest.json  genesis_replay_dashboard.html  human_review_decisions.json  layout_profile_selection.json  localhost_url.json  magic_selection.json  migration_manifest.json  migration_mode_decision.json  motion_plan.json  platform_ast.json  runtime_session.json  (+9 more)
mcp/: module.yaml
memory/: module.yaml  verified_memory_packets.jsonl
migration_inputs/: Hospital_Online_Consultation_Portal_BRD.docx  README.md  migration_request.example.yaml
migration_inputs/images/: README.md  image_manifest.example.yaml
migration_inputs/raw_data/: README.md  raw_data_manifest.example.yaml
migration_inputs/videos/: README.md  video_manifest.example.yaml
prompts/: repair.md
prompts/brd/: brd_design_extractor.md  brd_mockup_extractor.md
prompts/design/: design_decision_engine.md  magic_selector.md  screenshot_to_ui.md  website_to_ui.md
prompts/generation/: api_contracts.md  backend_java_spring.md  database_postgres.md
prompts/planning/: stack_decision.md
prompts/platform_adapters/: appian.md  database.md  mendix.md  outsystems.md  powerapps.md  source_inventory.md  structured.md  video_runtime.md
prompts/qa/: design_quality_gate.md  security_qa.md  visual_qa.md
prompts/review/: human_review.md
runtime/: module.yaml
schemas/: confidence_report.schema.json
schemas/brd/: brd_mockup_inventory.schema.json
scripts/: generate_module_index.py  install_genesis.ps1  install_genesis_all.ps1  validate_prereqs.ps1
tests/: test_approval_gates.py  test_brd_gate.py  test_design_quality.py  test_design_strategy.py  test_evidence_upgrades.py  test_flow.py  test_generated_app_gate.py  test_human_patch.py  test_intake.py  test_migration_mode.py  test_orchestrator.py  test_source_truth.py  test_stack_resolver.py
(+249 files in other folders)
