[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-pro"
version = "0.1.3"
description = "NoCode2ProCode by TrustEngines: Claude Code-native no-code/low-code/design/website to production pro-code framework."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Vishwas2311"}
]
keywords = ["ai", "nocode", "lowcode", "claude", "codegen", "nextjs", "fastapi", "migration"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "jsonschema>=4.22",
  "networkx>=3.3",
  "jinja2>=3.1",
  # Claude / LLM
  "anthropic>=0.30",
  "tiktoken>=0.7",
  "tenacity>=8.0",
  # HTTP
  "httpx>=0.27",
  # Document parsing (needed for Appian XML, BRD docs)
  "python-docx>=1.1",
  "lxml>=5.2",
  "beautifulsoup4>=4.12",
  # Image / visual
  "pillow>=10.4",
  # GitHub PR delivery
  "PyGitHub>=2.3"
]

[project.urls]
Homepage = "https://github.com/Vishwas2311/Agentic-AI-framework"
Repository = "https://github.com/Vishwas2311/Agentic-AI-framework"
"Bug Tracker" = "https://github.com/Vishwas2311/Agentic-AI-framework/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]
local-e2e = [
  # Web framework
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  # Document parsing
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "pillow>=10.4",
  "python-docx>=1.1",
  "pymupdf>=1.24",
  "unstructured>=0.14",
  # QA / SAST
  "bandit>=1.7",
  "schemathesis>=3.25",
  "sqlfluff>=3.0",
  "pip-audit>=2.7",
  # Observability
  "opentelemetry-sdk>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-exporter-otlp>=1.25",
  "structlog>=24.1",
  # Testing
  "locust>=2.29",
  "testcontainers>=4.7"
]
visual = [
  "beautifulsoup4>=4.12",
  "pillow>=10.4",
  "python-docx>=1.1"
]
security = [
  "semgrep>=1.80"
]
intelligence = [
  "numpy>=1.26",
  "opencv-python>=4.10",
  "pytesseract>=0.3",
  "openai-whisper>=20231117",
  "sentence-transformers>=3.0",
  "z3-solver>=4.13",
  "pykeen>=1.11"
]
all = [
  "bandit>=1.7",
  "beautifulsoup4>=4.12",
  "fastapi>=0.111",
  "httpx>=0.27",
  "lxml>=5.2",
  "locust>=2.29",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-exporter-otlp>=1.25",
  "pillow>=10.4",
  "pip-audit>=2.7",
  "python-docx>=1.1",
  "python-multipart>=0.0.9",
  "pymupdf>=1.24",
  "schemathesis>=3.25",
  "semgrep>=1.80",
  "sqlfluff>=3.0",
  "structlog>=24.1",
  "testcontainers>=4.7",
  "unstructured>=0.14",
  "uvicorn[standard]>=0.30"
]

[project.scripts]
genesis = "genesis_framework.core.cli:app"
nocode2procode = "genesis_framework.core.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
genesis_framework = [
  "static/*.html",
  "bundle/**/*",
  "bundle/*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
